--- a/Views/aluno/listar.phtml
+++ b/Views/aluno/listar.phtml
@@ -1,55 +1,74 @@
-<section class="card card-body container-fluid">
-    <h1 class="text-center">Listar alunos:</h1>
-    <hr>
-    <div class="mt-2 w-100 d-flex justify-content-end">
-        <a href="/alunos/novo"class="btn btn-outline-primary me-1">Adicionar aluno</a>
-        <a href="/alunos/relatorio" target="_blank" class="btn btn-outline-primary">Gerar PDF</a>
+<section class="mt-3 card card-body">
+    <h1>Gerenciar Alunos</h1>
+    <div class="mt-2">
+        <a href="/alunos/novo" class="btn btn-outline-dark">Novo Aluno</a>
+        <a href="/alunos/relatorio" target="_blank" class="btn btn-outline-dark">Gerar PDF</a>
     </div>
-    
-    <table class="table table-striped table-hover table-bordered align-middle text-center mt-4">
-    <caption>Tabela de alunos</caption>
+    <table class="table table-striped table-hover mt-4">
         <thead class="table-dark">
             <tr>
                 <th>#ID</th>
                 <th>Nome</th>
-                <th>CPF</th>
                 <th>Matricula</th>
+                <th>CPF</th>
                 <th>Email</th>
-                <th>Status</th>
                 <th>Gênero</th>
+                <th>Status</th>
                 <th>Data de Nascimento</th>
                 <th>Ações</th>
             </tr>
         </thead>
         <tbody>
             <?php
-                foreach($alunos ?? [] as $cadaAluno)
-                {
-                    $inverterData = array_reverse(explode('-',$cadaAluno->dataNascimento));
-                    $dataNascimento = implode('/',$inverterData);
-                    $estaMatriculado = 'Não matriculado';
-
-                    if($cadaAluno->status == 1){
-                        $estaMatriculado = 'Matriculado';
-                    }
-                    echo "
-                        <tr>
-                            <td class='fw-bold'>{$cadaAluno->id}</td>
-                            <td>{$cadaAluno->nome}</td>
-                            <td>{$cadaAluno->cpf}</td>
-                            <td>{$cadaAluno->matricula}</td>
-                            <td>{$cadaAluno->email}</td>
-                            <td>{$estaMatriculado}</td>
-                            <td>{$cadaAluno->genero}</td>
-                            <td>{$dataNascimento}</td>
-                            <td>
-                                <a href='/alunos/editar?id={$cadaAluno->id}' class='btn btn-warning'>Editar</a>
-                                <a href='/alunos/excluir?id={$cadaAluno->id}' class='btn btn-danger'>Excluir</a>
-                            </td>
-                        </tr>
-                    ";
-                }
+            foreach ($alunos ?? [] as $aluno) {
+                echo "
+                    <tr>
+                        <td>{$aluno->id}</td>
+                        <td>{$aluno->nome}</td>
+                        <td>{$aluno->matricula}</td>
+                        <td>{$aluno->cpf}</td>
+                        <td>{$aluno->email}</td>
+                        <td>{$aluno->genero}</td>
+                        <td>{$aluno->status}</td>
+                        <td>{$aluno->dataNascimento}</td>
+                        <td>
+                            <a href='/alunos/editar?id={$aluno->id}' class='btn btn-outline-warning'>Editar</a>
+                            <button type='button' class='btn btn-danger' data-bs-toggle='modal' data-bs-target='#modalexcluir' onclick='pegarID({$aluno->id})'>Excluir</button>
+                        </td>
+                    </tr>
+                        ";
+            }
             ?>
         </tbody>
     </table>
-</section>  
+</section>
+<div class='modal fade' id='modalexcluir' tabindex='-1' aria-labelledby='exampleModalLabel' aria-hidden='true'>
+    <div class='modal-dialog'>
+        <div class='modal-content'>
+            <div class='modal-header'>
+                <h1 class='modal-title fs-5' id='exampleModalLabel'>Apagar Aluno</h1>
+                <button type='button' class='btn-close' data-bs-dismiss='modal' aria-label='Close'></button>
+            </div>
+            <div class='modal-body'>
+                DESEJA APAGAR ESTE Aluno?
+                <input type="hidden" id="idatual">
+            </div>
+            <div class='modal-footer'>
+                <button type='button' class='btn btn-secondary' data-bs-dismiss='modal'>Cancelar</button>
+                <button type='button' onclick='confirmar()' class='btn btn-danger'>Confirmar</button>
+            </div>
+        </div>
+    </div>
+</div>
+<script>
+    function pegarID(id) {
+        document.getElementById("idatual").value = id;
+    }
+
+    function confirmar() {
+        if (true === confirm('Tem certeza mesmo?')) {
+            id = idatual.value;
+            location.href = '/alunos/excluir?id=' + id;
+        }
+    }
+</script>
