--- a/Views/auth/login.phtml
+++ b/Views/auth/login.phtml
@@ -1,11 +1,11 @@
-<section class="row mt-5 w-100">
+<section class="row mt-5">
     <div class="col-md-4 offset-md-4">
         <div class="card card-body">
             <form action="" method="post">
-                <input name="email" type="email" placeholder="Email" class="form-control form-control-lg mb-3">
-
-                <input name="senha" type="password" placeholder="Senha" class="form-control form-control-lg mb-3">
-
+                <label for="email">Email</label>
+                <input name="email" id="name" type="email" placeholder="Email" class="form-control form-control-lg mb-3">
+                <label for="senha">Senha</label>
+                <input name="senha" id="senha" type="password" placeholder="Senha" class="form-control form-control-lg mb-3">
                 <div class="d-grid">
                     <button class="btn btn-dark btn-lg">Entrar</button>
                 </div>
