--- a/Views/categoria/listar.phtml
+++ b/Views/categoria/listar.phtml
@@ -1,38 +1,63 @@
-<section class="card card-body container-fluid">
-    <h1 class="text-center">Listar categorias:</h1>
-    <hr>
-    <div class="mt-2 w-100 d-flex justify-content-end ">
-        <a href="/categorias/novo" class="btn btn-outline-primary me-1">Adicionar categorias</a>
-        <a href="/categorias/relatorio" class="btn btn-outline-primary">Gerar PDF</a>
+<section class="mt-3 card card-body">
+    <h1>Gerenciar Categorias</h1>
+    <div class="mt-2">
+        <a href="/categorias/novo" class="btn btn-outline-dark">Novo Curso</a>
+        <a href="/categorias/relatorio" target="_blank" class="btn btn-outline-dark">Gerar PDF</a>
     </div>
-    <div>
-        <table class="table table-striped table-hover table-bordered align-middle text-center mt-4">
-            <caption>Tabela de categorias</caption>
-            <thead class="table-dark">
-                <tr>
-                    <th>#ID</th>
-                    <th>Nome</th>
-                    <th>Ações</th>
-                </tr>
-            </thead>
-            <tbody>
-                <?php
-                foreach ($categorias ?? [] as $cadaCategoria)
-                {
-                    echo "
-                        <tr>
-                            <td class='fw-bold'>{$cadaCategoria->id}</td>
-                            <td>{$cadaCategoria->nome}</td>
-                            <td>
-                                <a href='/categorias/editar?id={$cadaCategoria->id}' class='btn btn-warning'>Editar</a>
-                                <a href='/categorias/excluir?id={$cadaCategoria->id}' class='btn btn-danger'>Excluir</a>
-                            </td>
-                        </tr>
+    <table class="table table-striped table-hover mt-4">
+        <thead class="table-dark">
+            <tr>
+                <th>#ID</th>
+                <th>Nome</th>
+                <th>Ações</th>
+            </tr>
+        </thead>
+        <tbody>
+            <?php
+            if(isset($categorias)&& sizeof($categorias) > 0){
+                foreach($categorias as $categoria){
+                    echo"
+                    <tr>
+                        <td>{$categoria->id}</td>
+                        <td>{$categoria->nome}</td>
+                        <td>
+                            <a href='/categorias/editar?id={$categoria->id}' class='btn btn-outline-warning'>Editar</a>
+                            <button type='button' class='btn btn-danger' data-bs-toggle='modal' data-bs-target='#modalexcluir' onclick='pegarID({$categoria->id})'>Excluir</button>
+                        </td>
+                    </tr>
                     ";
                 }
-                ?>
-            </tbody>
-        </table>
-    </div>
-    </div>
+            }
+            ?>
+        </tbody>
+    </table>
 </section>
+<div class='modal fade' id='modalexcluir' tabindex='-1' aria-labelledby='exampleModalLabel' aria-hidden='true'>
+    <div class='modal-dialog'>
+        <div class='modal-content'>
+            <div class='modal-header'>
+                <h1 class='modal-title fs-5' id='exampleModalLabel'>Apagar Categoria</h1>
+                <button type='button' class='btn-close' data-bs-dismiss='modal' aria-label='Close'></button>
+            </div>
+            <div class='modal-body'>
+                DESEJA APAGAR ESTA CATEGORIA?
+                <input type="hidden" id="idatual">
+            </div>
+            <div class='modal-footer'>
+                <button type='button' class='btn btn-secondary' data-bs-dismiss='modal'>Cancelar</button>
+                <button type='button' onclick='confirmar()' class='btn btn-danger'>Confirmar</button>
+            </div>
+        </div>
+    </div>
+</div>
+<script>
+    function pegarID(id){
+        document.getElementById("idatual").value = id;
+    }
+    function confirmar(){
+        if(true === confirm('Tem certeza mesmo?')){
+            id= idatual.value;
+            location.href = '/categorias/excluir?id='+id;
+        }
+    }
+</script>
