--- a/Views/curso/listar.phtml
+++ b/Views/curso/listar.phtml
@@ -1,54 +1,71 @@
-<section class="card card-body container-fluid">
-    <h1 class="text-center">Listar cursos:</h1>
-    <hr>
-    <div class="mt-2 w-100 d-flex justify-content-end ">
-        <a href="/cursos/novo" class="btn btn-outline-primary me-1">Adicionar curso</a>
-        <a href="/cursos/relatorio" target="_blank" class="btn btn-outline-primary">Gerar PDF</a>
+<section class="mt-3 card card-body">
+    <h1>Gerenciar Cursos</h1>
+    <div class="mt-2">
+        <a href="/cursos/novo" class="btn btn-outline-dark">Novo Curso</a>
+        <a href="/cursos/relatorio" target="_blank" class="btn btn-outline-dark">Gerar PDF</a>
     </div>
-    <div class="row">
-        <div class="col-4">
-
-        </div>
-        <div class="col-8">
-            <table class="table table-striped table-hover table-bordered align-middle text-center mt-4">
-                <caption>Tabela de cursos</caption>
-                <thead class="table-dark">
-                    <tr>
-                        <th>#ID</th>
-                        <th>Nome</th>
-                        <th>Carga Horaria</th>
-                        <th>Descrição</th>
-                        <th>Status</th>
-                        <th>Categoria</th>
-                        <th>Ações</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <?php
-                    foreach ($cursos ?? [] as $cadaCurso) 
-                    {
-                        $estaAtivo = 'Não ativo';
-                        if ($cadaCurso[4] == 1) {
-                            $estaAtivo = 'Ativo';
-                        }
-                        echo "
-                        <tr>
-                            <td class='fw-bold'>{$cadaCurso[0]}</td>
-                            <td>{$cadaCurso[1]}</td>
-                            <td>{$cadaCurso[2]}</td>
-                            <td>{$cadaCurso[3]}</td>
-                            <td>{$estaAtivo}</td>
-                            <td>{$cadaCurso['nome']}</td>
-                            <td>
-                                <a href='/cursos/editar?id={$cadaCurso[0]}' class='btn btn-warning'>Editar</a>
-                                <a href='/cursos/excluir?id={$cadaCurso[0]}' class='btn btn-danger'>Excluir</a>
-                            </td>
-                        </tr>
-                    ";
-                    }
-                    ?>
-                </tbody>
-            </table>
-        </div>
-    </div>
+    <table class="table table-striped table-hover mt-4">
+        <thead class="table-dark">
+            <tr>
+                <th>#ID</th>
+                <th>Nome</th>
+                <th>Carga Horaria</th>
+                <th>Descrição</th>
+                <th>Status</th>
+                <th>Categoria</th>
+                <th>Ações</th>
+            </tr>
+        </thead>
+        <tbody>
+            <?php
+            if(isset($cursos)&& sizeof($cursos) > 0){
+                foreach($cursos as $curso){
+                    echo "
+                            <tr>
+                                <td>{$curso['curso_id']}</td>
+                                <td>{$curso['curso_nome']}</td>
+                                <td>{$curso['curso_status']}</td>
+                                <td>{$curso['curso_descricao']}</td>
+                                <td>{$curso['curso_carga_horaria']}</td>
+                                <td>{$curso['categoria_nome']}</td>
+                                <td>
+                                    <a href='/cursos/editar?id={$curso['curso_id']}' class='btn btn-warning'>Editar</a>
+                                    <button type='button' class='btn btn-danger' data-bs-toggle='modal' data-bs-target='#modalexcluir' onclick='pegarID({$curso['curso_id']})'>Excluir</button>
+                                </td>
+                            </tr>
+                        ";
+                }
+            }
+            ?>
+        </tbody>
+    </table>
 </section>
+<div class='modal fade' id='modalexcluir' tabindex='-1' aria-labelledby='exampleModalLabel' aria-hidden='true'>
+    <div class='modal-dialog'>
+        <div class='modal-content'>
+            <div class='modal-header'>
+                <h1 class='modal-title fs-5' id='exampleModalLabel'>Apagar Curso</h1>
+                <button type='button' class='btn-close' data-bs-dismiss='modal' aria-label='Close'></button>
+            </div>
+            <div class='modal-body'>
+                DESEJA APAGAR ESTE CURSO?
+                <input type="hidden" id="idatual">
+            </div>
+            <div class='modal-footer'>
+                <button type='button' class='btn btn-secondary' data-bs-dismiss='modal'>Cancelar</button>
+                <button type='button' onclick='confirmar()' class='btn btn-danger'>Confirmar</button>
+            </div>
+        </div>
+    </div>
+</div>
+<script>
+    function pegarID(id){
+        document.getElementById("idatual").value = id;
+    }
+    function confirmar(){
+        if(true === confirm('Tem certeza mesmo?')){
+            id= idatual.value;
+            location.href = '/cursos/excluir?id='+id;
+        }
+    }
+</script>
